--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@prisma/client": "^4.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "ffprobe": "^1.1.2",
+    "ffprobe-static": "^3.1.0",
     "joi": "^17.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,6 +43,8 @@
     "@nestjs/testing": "^9.0.0",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
+    "@types/ffprobe": "^1.1.3",
+    "@types/ffprobe-static": "^2.0.1",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
