--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@prisma/client": "^4.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "fastify": "^4.4.0",
     "ffprobe": "^1.1.2",
     "ffprobe-static": "^3.1.0",
     "joi": "^17.6.0",
+    "mime-types": "^2.1.35",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -46,6 +48,7 @@
     "@types/ffprobe": "^1.1.3",
     "@types/ffprobe-static": "^2.0.1",
     "@types/jest": "28.1.4",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
