extract config to external library

--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^rms/file-loader(|/.*)$": "<rootDir>/libs/file-loader/src/$1"
+      "^@rms/file-loader(|/.*)$": "<rootDir>/libs/file-loader/src/$1",
+      "^@rms/config(|/.*)$": "<rootDir>/libs/config/src/$1"
     }
   }
 }
