--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     ],
     "moduleNameMapper": {
       "^@rms/file-loader(|/.*)$": "<rootDir>/libs/file-loader/src/$1",
-      "^@rms/config(|/.*)$": "<rootDir>/libs/config/src/$1"
+      "^@rms/config(|/.*)$": "<rootDir>/libs/config/src/$1",
+      "^@rms/database(|/.*)$": "<rootDir>/libs/database/src/$1"
     }
   }
 }
