--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
     "moduleNameMapper": {
       "^@rms/file-loader(|/.*)$": "<rootDir>/libs/file-loader/src/$1",
       "^@rms/config(|/.*)$": "<rootDir>/libs/config/src/$1",
-      "^@rms/database(|/.*)$": "<rootDir>/libs/database/src/$1"
+      "^@rms/database(|/.*)$": "<rootDir>/libs/database/src/$1",
+      "^@rms/auth(|/.*)$": "<rootDir>/libs/auth/src/$1"
     }
   }
 }
