--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-fastify": "^9.0.0",
     "@nestjs/schedule": "^2.1.0",
     "@prisma/client": "^4.0.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fastify": "^4.4.0",
@@ -43,6 +44,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cron": "^2.0.0",
     "@types/ffprobe": "^1.1.3",
     "@types/ffprobe-static": "^2.0.1",
