--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.0",
     "@nestjs/schedule": "^2.1.0",
     "@prisma/client": "^4.0.0",
@@ -36,6 +37,8 @@
     "ffprobe-static": "^3.1.0",
     "joi": "^17.6.0",
     "mime-types": "^2.1.35",
+    "passport": "^0.6.0",
+    "passport-http": "^0.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -51,6 +54,7 @@
     "@types/jest": "28.1.4",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^16.0.0",
+    "@types/passport-http": "^0.3.9",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
