--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "joi": "^17.6.0",
     "mime-types": "^2.1.35",
     "passport": "^0.6.0",
+    "passport-discord": "^0.1.4",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -56,6 +57,7 @@
     "@types/jest": "28.1.4",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^16.0.0",
+    "@types/passport-discord": "^0.1.6",
     "@types/passport-http": "^0.3.9",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
