--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ffprobe-static": "^3.1.0",
     "joi": "^17.6.0",
     "mime-types": "^2.1.35",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-discord": "^0.1.4",
     "passport-http": "^0.3.0",
@@ -56,6 +57,7 @@
     "@types/ffprobe-static": "^2.0.1",
     "@types/jest": "28.1.4",
     "@types/mime-types": "^2.1.1",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.0.0",
     "@types/passport-discord": "^0.1.6",
     "@types/passport-http": "^0.3.9",
